--- a/style.css
+++ b/style.css
@@ -43,11 +43,11 @@ font-size:30px ;
     padding: 3px 0px;
 }
 .secondpart2nd ul{}
-.secondpart2nd ul li{
+.secondpart2nd ul li{display:block
 }
 .secondpart2nd ul li a{
 text-decoration: none;
-border-bottom: 1px solid lightgray;
+border-bottom: 1px solid #eee;;
 padding: 6px 0px;
 color:black;
 /* font-weight: bold; */
