--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ font-size:30px ;
 }
 .secondpart2nd ul li a{
 text-decoration: none;
-border-bottom: 1px solid #eee;;
+border-bottom: 1px solid #eee;
 padding: 6px 0px;
 color:black;
 /* font-weight: bold; */
@@ -69,15 +69,21 @@ display:block
     text-decoration: none;
     font-size: 16px;
 }
-h5 a {font-weight: bold;}
+h5 a {font-weight: bold;
+    color: black;}
 h5 a:hover{color:#CC0000}
+
+.list-unstyled {}
 
 /* 4th part start */
 .fourthpart img{width: 104%;
     height: 47%;}
 .thirdimgsingle a{
     color: black;
-    text-decoration: none;
+text-decoration: none;
+border-bottom: 1px solid #eee;
+padding: 5px 10px;
+font-size: 15px;;
 }
 .thirdimgsingle h5 a:hover{color:#CC0000}
 .thirdimgsingle h5 a{font-size: 16px;
@@ -117,6 +123,7 @@ padding: 8px 25px;
 /* background:lightgreen; */
 text-align: center;
 }
+.fas{font-size:13px;}
 
 .second{float:right;
     /* background:pink; */
