--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ display:block
     font-size: 16px;
 }
 h5 a {font-weight: bold;
-    color: black;}
+    color: black;
+}
 h5 a:hover{color:#CC0000}
 
 .list-unstyled {}
